# goldmine-project

./: .gitignore  404.html  BUILD_ORDER.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
assets/: index--Yl-vWYQ.js  index-6fDC9ILc.js  index-B33KKJcG.js  index-B5vRBtwo.js  index-B65gN9K3.js  index-B6AlXxXl.css  index-B9LkWmfU.css  index-BAoiEYqL.js  index-BBYTrVTq.js  index-BDiB0X2Z.css  index-BGPk_WfF.js  index-BNkhT9ly.js  index-BQORkXIs.css  index-BQgW2pI0.js  index-BScWWScp.js  index-BVJixpgH.js  index-BWUNDRB-.js  index-B_cFB3fM.css  index-BgipEc6n.js  index-Bj1X-lJE.css  index-BlfBuvap.js  index-BsMNHabh.css  index-Bx381wwo.js  index-C-sSwlOl.js  index-CCRQOWu1.js  index-CEPF2C7l.css  index-CEq_ELdo.js  index-CFjceD0-.js  index-CJjsmdwI.js  index-CefMpK8E.css  index-CfTLwwKZ.css  index-CguSQa_u.css  index-CijztrXt.js  index-Cr_xanfw.css  index-Csqj6Apl.js  index-CtKB1_oT.js  index-CtTPHcCd.js  index-Ctaq6btl.css  index-CvZwBN01.css  index-Cvk7fHOE.js  (+33 more)
frontend/: index.html  package.json  style.css  tsconfig.json
frontend/src/: api.ts  gameState.ts  index.ts  upgradeLogic.ts  upgrades.ts
goldmine-game/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
goldmine-game/src/: App.tsx  index.css  main.tsx
goldmine-game/tests/: employeeXP.test.ts  (+4 more)
infra/: Pulumi.dev.yaml  __main__.py
lambda/: README.md  build.sh  handler.py  pyproject.toml  requirements.txt  test_local.py
pyscript-stubs/: js.pyi
tests/: test_api.py
(+38 files in other folders)
