[tool.poetry]
name = "goldmine-lambda"
version = "0.3.0"
description = "AWS Lambda functions for Goldmine game"
authors = ["Todd Gerdy <toadimous@gmail.com>"]
readme = "README.md"
package-mode = false  # â† disables packaging

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.39.11,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
